<resources>
    <string name="app_name">lab06</string>

    <string name="menuLeft">Images</string>
    <string name="menuRight">List</string>
    <string name="menuMain">Main</string>

    <string name="beforeImage">I am at the top!</string>
    <string name="mainContentDescription">noDescription</string>
    <string name="afterImage1">I am higher!</string>
    <string name="afterImage2">I am lower!</string>

    <string name="tabLayout">tabLayout</string>
    <string name="topTextFirstTab">Text above image:</string>
    <string name="underImageTextInfo">Text under image:</string>
    <string name="underImageText1">Higher text:</string>
    <string name="underImageText2">Lower text:</string>
    <string name="save">Save</string>

    <string name="orc">Orc</string>
    <string name="necromancer">Necromancer</string>
    <string name="skeleton">Skeleton</string>

    <string name="addListMenu">Add</string>
    <string name="itemTitle">Item title</string>
    <string name="itemDescription">Item description</string>
    <string name="str">Strength</string>
    <string name="danger">Is dangerous</string>
    <string name="returnButton">Return</string>

    <string name="CreateTitle">Create new minion</string>
    <string name="Lich">Lich</string>
    <string name="Skeleton">Skeleton</string>
    <string name="Ghoul">Ghoul</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="addPhoto">Add photo</string>
    <string name="mainDataSetting">Edit main data</string>
    <string name="startFragment">Start fragment</string>
    <string name="previewCamera">Add app photo</string>
</resources>