<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkableBehavior="single">
        <item
            android:id="@+id/firstFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/homeicon"
            android:title="@string/menuMain"

            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/secondFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/orcicon"
            android:title="@string/mainDataSetting"

            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/thirdFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/rightmenuicon_foreground"
            android:title="@string/menuRight"

            app:showAsAction="ifRoom" />


        <item
            android:id="@+id/startFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/theme1icon"
            android:title="@string/startFragment"

            app:showAsAction="ifRoom" />
    </group>
</menu>