<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/secondFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/leftmenuicon_foreground"
        android:title="@string/menuLeft"

        app:showAsAction="always" />

    <item
        android:id="@+id/firstFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/homemenuicon_foreground"
        android:title="@string/menuMain"

        app:showAsAction="always" />

    <item
        android:id="@+id/thirdFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/rightmenuicon_foreground"
        android:title="@string/menuRight"

        app:showAsAction="always" />
</menu>