<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDataFragment">


    <ProgressBar
        android:id="@+id/show_strength_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="256dp"
        android:layout_height="55dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="78dp"
        android:max="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_strength_txt" />

    <ImageView
        android:id="@+id/show_type"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="27dp"
        android:src="@drawable/skeletonicon"
        app:layout_constraintEnd_toStartOf="@+id/show_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_strength_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="179dp"
        android:text="@string/str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_spec" />

    <TextView
        android:id="@+id/show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="169dp"
        android:text="@string/itemTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/show_type"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/show_dangerous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="144dp"
        android:enabled="false"
        android:text="@string/danger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_strength_bar" />

    <TextView
        android:id="@+id/show_spec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/itemDescription"
        app:layout_constraintStart_toEndOf="@+id/show_type"
        app:layout_constraintTop_toBottomOf="@+id/show_name" />

    <Button
        android:id="@+id/show_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="160dp"
        android:text="@string/returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_dangerous" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_return_button" />

</androidx.constraintlayout.widget.ConstraintLayout>